--- a/src/main/webapp/pages/MyCart/MyCart.html
+++ b/src/main/webapp/pages/MyCart/MyCart.html
@@ -97,6 +97,7 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn14_2">
                         <wm-container name="containerPaymentRecieved" margin="1em" backgroundcolor="#ffffff" horizontalalign="center" show="false">
                             <wm-label padding="unset 0.5em" name="label8" class="h3" caption="Thank you! The payment you submitted has been processed."></wm-label>
+                            <wm-html><a href="/">Click here</a> to return to CivicXpress</wm-html>
                         </wm-container>
                     </wm-gridcolumn>
                 </wm-gridrow>
