--- a/src/main/webapp/pages/MyCart/MyCart.html
+++ b/src/main/webapp/pages/MyCart/MyCart.html
@@ -99,19 +99,23 @@
                             <wm-label padding="unset 0.5em" name="label8" class="h3" caption="Thank you! The payment you submitted has been processed."></wm-label>
                             <wm-html><a href="/">Click here</a> to return to CivicXpress</wm-html>
                         </wm-container>
+                        <wm-container name="containerPaymentError margin=" 1em " backgroundcolor="#ffffff " horizontalalign="center " show="false ">
+                            <wm-label padding="unset 0.5em " name="label8 " class="h3 " caption="There was a problem processing payment. "></wm-label>
+                            <wm-html><a href="/ ">Click here</a> to return to CivicXpress</wm-html>
+                        </wm-container>                        
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
-    <wm-view class="dialog-view" name="view3">
-        <wm-pagedialog name="pagedialogViewForm" oktext="Close" content="_viewForm" modal="true" class="modal-larger" title="View Form" iconclass="wi wi-assignment">
-            <wm-param name="FormGUID" value="bind:Widgets.gridFeesList.selecteditem.itemGuid" type="string"></wm-param>
+    <wm-view class="dialog-view " name="view3 ">
+        <wm-pagedialog name="pagedialogViewForm " oktext="Close " content="_viewForm " modal="true " class="modal-larger " title="View Form " iconclass="wi wi-assignment ">
+            <wm-param name="FormGUID " value="bind:Widgets.gridFeesList.selecteditem.itemGuid " type="string "></wm-param>
         </wm-pagedialog>
     </wm-view>
-    <wm-view class="dialog-view" name="view2">
-        <wm-pagedialog name="pagedialogViewInspection" title="View Inspection" oktext="Close" content="_viewInspection" class="modal-larger" modal="true" iconclass="wi wi-find-in-page">
-            <wm-param name="inspectionGuid" value="bind:Widgets.gridFeesList.selecteditem.itemGuid" type="string"></wm-param>
+    <wm-view class="dialog-view " name="view2 ">
+        <wm-pagedialog name="pagedialogViewInspection " title="View Inspection " oktext="Close " content="_viewInspection " class="modal-larger " modal="true " iconclass="wi wi-find-in-page ">
+            <wm-param name="inspectionGuid " value="bind:Widgets.gridFeesList.selecteditem.itemGuid " type="string "></wm-param>
         </wm-pagedialog>
     </wm-view>
 </wm-page>
