updated label Files modified - [EditForm]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -612,7 +612,7 @@
                                                                 <wm-panel iconclass="wi wi-find-in-page" name="panel10" title="Inspections" class="panel-primary">
                                                                     <wm-gridrow name="gridrow23_1" padding="unset unset 1em unset">
                                                                         <wm-gridcolumn columnwidth="4" name="gridcolumn45_1" padding="unset 1em unset unset">
-                                                                            <wm-form-field name="allowInspections" displayname="Allow Inspection Requests" show="true" primary-key="false" generator="assigned" key="allowInspections" type="boolean" readonly="false"
+                                                                            <wm-form-field name="allowInspections" displayname="Allow User Inspection Requests" show="true" primary-key="false" generator="assigned" key="allowInspections" type="boolean" readonly="false"
                                                                             required="false" widget="checkbox" placeholder="" defaultvalue="false" hint="This allows inspections to be requested by the end user while the form is in this status. Municipality employees can always request an inspection. This setting is not available if &quot;Consider Closed&quot; is selected."
                                                                             checkedvalue="true" uncheckedvalue="false" disabled="bind:Widgets.lfFormTypeStatus.formWidgets.considerClosed.datavalue"></wm-form-field>
                                                                         </wm-gridcolumn>
