updated label Files modified - [EditForm]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -456,8 +456,8 @@
                                                     readonly="false">
                                                         <wm-checkbox scopedatavalue="row['advanceOnZero']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
                                                     </wm-grid-column>
-                                                    <wm-grid-column binding="allowInspections" caption="Allow Inspection Requests" type="boolean" widget-type="checkbox" width="10%" primary-key="false" generator="assigned" edit-widget-type="checkbox" show="true"
-                                                    readonly="false">
+                                                    <wm-grid-column binding="allowInspections" caption="Allow User Inspection Requests" type="boolean" widget-type="checkbox" width="10%" primary-key="false" generator="assigned" edit-widget-type="checkbox"
+                                                    show="true" readonly="false">
                                                         <wm-checkbox scopedatavalue="row['allowInspections']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
                                                     </wm-grid-column>
                                                     <wm-grid-column binding="considerClosed" caption="Consider Closed" type="boolean" widget-type="checkbox" width="10%" primary-key="false" generator="assigned" edit-widget-type="checkbox" show="true" readonly="false">
