-EditInspection- updated help text and made the panels the success style to differentiate EditForm / EditInspection pages -ManageInspection- updated panels to success style to differentiate ManageForms/ManageInspections Files modified - [ManageInspections,EditInspection]

--- a/src/main/webapp/pages/ManageInspections/ManageInspections.html
+++ b/src/main/webapp/pages/ManageInspections/ManageInspections.html
@@ -25,7 +25,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                        <wm-panel iconclass="wi wi-find-in-page" autoclose="outsideClick" name="panelInspectionDesigns" title="Municipality Inspections" class="panel-primary">
+                        <wm-panel iconclass="wi wi-find-in-page" autoclose="outsideClick" name="panelInspectionDesigns" title="Municipality Inspections" class="panel-success">
                             <wm-layoutgrid name="layoutgrid6_1">
                                 <wm-gridrow name="gridrow11">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn12"></wm-gridcolumn>
@@ -57,7 +57,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow4_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                        <wm-panel iconclass="wi wi-group-work" autoclose="outsideClick" title="Inspection Categories" class="panel-primary" name="panelInspectionCategories">
+                        <wm-panel iconclass="wi wi-group-work" autoclose="outsideClick" title="Inspection Categories" class="panel-success" name="panelInspectionCategories">
                             <wm-layoutgrid name="layoutgrid7">
                                 <wm-gridrow name="gridrow13">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn16"></wm-gridcolumn>
